// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`InputComponent rendering component should match snapshot with no @Input properties defined 1`] = `
<ogm-input
  destroy$={[Function Subject]}
  ogm$={[Function AnonymousSubject]}
  ogmInput={[Function FormControl2]}
  ogmInputChange={[Function OutputEmitterRef]}
  ogmService={[Function OgmService]}
  placeholderMessage={[Function Function]}
  validate={[Function Function]}
>
  <div
    class="ogm-form"
  >
    <input
      class="ng-untouched ng-pristine ng-valid"
      maxlength="10"
      placeholder=""
      type="text"
    />
  </div>
</ogm-input>
`;

exports[`InputComponent rendering component should match snapshot with validate set to false 1`] = `
<ogm-input
  destroy$={[Function Subject]}
  ogm$={[Function AnonymousSubject]}
  ogmInput={[Function FormControl2]}
  ogmInputChange={[Function OutputEmitterRef]}
  ogmService={[Function OgmService]}
  placeholderMessage={[Function Function]}
  validate={[Function Function]}
>
  <div
    class="ogm-form"
  >
    <input
      class="ng-untouched ng-pristine ng-valid"
      maxlength="10"
      placeholder="Placeholder message"
      type="text"
    />
  </div>
</ogm-input>
`;

exports[`InputComponent rendering component should match snapshot with validate set to true 1`] = `
<ogm-input
  destroy$={[Function Subject]}
  ogm$={[Function AnonymousSubject]}
  ogmInput={[Function FormControl2]}
  ogmInputChange={[Function OutputEmitterRef]}
  ogmService={[Function OgmService]}
  placeholderMessage={[Function Function]}
  validate={[Function Function]}
>
  <div
    class="ogm-form"
  >
    <input
      class="ng-untouched ng-pristine ng-valid"
      maxlength="12"
      placeholder="Placeholder message"
      type="text"
    />
  </div>
</ogm-input>
`;
